# ec-interface

./: .bumpversion.cfg  DOCUMENTATION.md  LICENSE  Makefile  README.md  pyproject.toml  release_it.sh
.github/workflows/: tests.yml
ec_interface/: __init__.py  ec_input.py  ec_parameters.py  ec_results.py  molecular_geometry.py  vasp_geometry.py  vasp_results.py
ec_interface/scripts/: __init__.py  check_slab.py  compute_fee.py  create_potcar.py  extract_data.py  fukui.py  get_nzc.py  get_wf.py  integrate_xy_average.py  make_directories.py  make_xy_average.py  merge_poscar.py  set_vacuum.py  to_vasp_geometry.py
tests/: THF.xyz  __init__.py  ec_results.h5  results.csv  test_ec_parameters.py  test_ec_results.py  test_extract_data.py  test_geometry.py  test_make_directories.py  test_set_vacuum.py
white_paper/: potential.bib  potential.tex
