[project]
name = "ec-interface"
dynamic = ["version"]
description = "A small code to create EC interface calculations with VASP and extract the corresponding data out of them."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

maintainers = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

classifiers = [
    # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "h5py",
    "pyyaml",
    "schema",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-quotes",
    "autopep8",
    "bump2version",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/pierre-24/ec-interface"
"Bug Reports" = "https://github.com/pierre-24/ec-interface/issues"
"Source" = "https://github.com/pierre-24/ec-interface/"

[project.scripts]
'ei-charge-intg' = 'ec_interface.scripts.integrate_xy_average:main'
'ei-check-slab' = 'ec_interface.scripts.check_slab:main'
'ei-compute-fee' = 'ec_interface.scripts.compute_fee:main'
'ei-create-potcar' = 'ec_interface.scripts.create_potcar:main'
'ei-extract-data' = 'ec_interface.scripts.extract_data:main'
'ei-fukui' = 'ec_interface.scripts.fukui:main'
'ei-get-nzc' = 'ec_interface.scripts.get_nzc:main'
'ei-make-directories' = 'ec_interface.scripts.make_directories:main'
'ei-merge-poscar' = 'ec_interface.scripts.merge_poscar:main'
'ei-set-vacuum' = 'ec_interface.scripts.set_vacuum:main'
'ei-to-vasp-geometry' = 'ec_interface.scripts.to_vasp_geometry:main'
'ei-xy-average' = 'ec_interface.scripts.make_xy_average:main'

[tool.setuptools]
packages = ['ec_interface', 'ec_interface.scripts']

[tool.setuptools.dynamic]
version = {attr = "ec_interface.__version__"}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]